--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ streamlit
 pydub
 boto3
 requests
-git+https://github.com/stefanrmmr/streamlit-audiorec.git
+git+https://:@github.com/stefanrmmr/streamlit-audiorec.git
+
